tests/samples/negative/generics/inference_failure.ax
module inference_failure;

fn phantom<T>(value: i32) -> i32 {
    return value;
}

fn main() -> i32 {
    return phantom(1);
}
